raw_generated_classes/results_utbot-mocks_30/results_utbot-mocks_30/GUAVA-21_5/metrics/log_detailed.txt

>>> TOOL NAME:  utbot-mocks

>>> BENCHMARK:  GUAVA-21

>>> RUN NUMBER: 5

>>> MODE: --only-compute-metrics
Creating directory ./temp
Creating directory ./temp/data
Creating directory ./temp/testcases
Executing /home/utbot_mocks/./runtool
>> BENCHMARK
>> /var/benchmarks/projects/guava/guava/src
>> /var/benchmarks/projects/guava/guava/target/classes
>> 6
>> /var/benchmarks/projects/guava/guava/target/guava-26.0-jre.jar
>> /var/benchmarks/projects/./guava/guava/target/dependency/checker-qual-2.5.2.jar
>> /var/benchmarks/projects/guava/guava/target/dependency/error_prone_annotations-2.1.3.jar
>> /var/benchmarks/projects/guava/guava/target/dependency/j2objc-annotations-1.1.jar
>> /var/benchmarks/projects/guava/guava/target/dependency/jsr305-3.0.2.jar
>> /var/benchmarks/projects/guava/guava/target/dependency/animal-sniffer-annotations-1.14.jar
>> 0
expecting CLASSPATH or READY
<< CLASSPATH
expecting number
<< 0
<< READY
>> 30


### COMPUTING METRICS ###: com.google.common.base.internal.Finalizer


Starting class com.google.common.base.internal.Finalizer


Ending class com.google.common.base.internal.Finalizer
Creating directory results_utbot-mocks_30/GUAVA-21_5/temp/testcases/bin
Creating dummy JUnit test file

---Compilation---

===
javac command line:
/usr/bin/javac -sourcepath /home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases -cp /var/benchmarks/projects/guava/guava/target/guava-26.0-jre.jar:/var/benchmarks/projects/./guava/guava/target/dependency/checker-qual-2.5.2.jar:/var/benchmarks/projects/guava/guava/target/dependency/error_prone_annotations-2.1.3.jar:/var/benchmarks/projects/guava/guava/target/dependency/j2objc-annotations-1.1.jar:/var/benchmarks/projects/guava/guava/target/dependency/jsr305-3.0.2.jar:/var/benchmarks/projects/guava/guava/target/dependency/animal-sniffer-annotations-1.14.jar:/usr/local/bin/lib/junit.jar:/usr/local/bin/lib/hamcrest-core.jar -d results_utbot-mocks_30/GUAVA-21_5/temp/testcases/bin /home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/SBSTDummyForCoverageAndMutationCalculation.java


===
javac command line:
/usr/bin/javac -sourcepath /home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases -cp /var/benchmarks/projects/guava/guava/target/guava-26.0-jre.jar:/var/benchmarks/projects/./guava/guava/target/dependency/checker-qual-2.5.2.jar:/var/benchmarks/projects/guava/guava/target/dependency/error_prone_annotations-2.1.3.jar:/var/benchmarks/projects/guava/guava/target/dependency/j2objc-annotations-1.1.jar:/var/benchmarks/projects/guava/guava/target/dependency/jsr305-3.0.2.jar:/var/benchmarks/projects/guava/guava/target/dependency/animal-sniffer-annotations-1.14.jar:/usr/local/bin/lib/junit.jar:/usr/local/bin/lib/hamcrest-core.jar -d results_utbot-mocks_30/GUAVA-21_5/temp/testcases/bin /home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/com/google/common/base/internal/FinalizerTest.java

/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/com/google/common/base/internal/FinalizerTest.java:53: error: not a statement
            Object null = createInstance("java.lang.ref.ReferenceQueue$Null");
            ^
/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/com/google/common/base/internal/FinalizerTest.java:53: error: ';' expected
            Object null = createInstance("java.lang.ref.ReferenceQueue$Null");
                  ^
2 errors
Failed to compile 'com/google/common/base/internal/FinalizerTest.java'!
shaded.org.apache.commons.exec.ExecuteException: Process exited with an error: 1 (Exit value: 1)
	at shaded.org.apache.commons.exec.DefaultExecutor.executeInternal(DefaultExecutor.java:377)
	at shaded.org.apache.commons.exec.DefaultExecutor.execute(DefaultExecutor.java:160)
	at shaded.org.apache.commons.exec.DefaultExecutor.execute(DefaultExecutor.java:147)
	at sbst.benchmark.TestSuite.compile(TestSuite.java:250)
	at sbst.benchmark.TestSuite.<init>(TestSuite.java:68)
	at sbst.benchmark.TranscriptWriter.endClass(TranscriptWriter.java:136)
	at sbst.benchmark.RunTool.execute(RunTool.java:141)
	at sbst.benchmark.RunTool.run(RunTool.java:62)
	at sbst.benchmark.Main.main(Main.java:160)

---Timing Information---
Running tests with the following classpath: 
/var/benchmarks/projects/guava/guava/target/guava-26.0-jre.jar:/var/benchmarks/projects/./guava/guava/target/dependency/checker-qual-2.5.2.jar:/var/benchmarks/projects/guava/guava/target/dependency/error_prone_annotations-2.1.3.jar:/var/benchmarks/projects/guava/guava/target/dependency/j2objc-annotations-1.1.jar:/var/benchmarks/projects/guava/guava/target/dependency/jsr305-3.0.2.jar:/var/benchmarks/projects/guava/guava/target/dependency/animal-sniffer-annotations-1.14.jar:/usr/local/bin/lib/junit.jar:/usr/local/bin/lib/hamcrest-core.jar:/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/bin
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated

---The tests are re-executed other four times to find the flaky ones---
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated

=== Run Jacoco for Coverage ===
Number of instrumented file = 2323
Running tests with the following classpath: 
/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/guava-26.0-jre_instrumented.jar:/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/checker-qual-2.5.2_instrumented.jar:/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/error_prone_annotations-2.1.3_instrumented.jar:/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/j2objc-annotations-1.1_instrumented.jar:/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/jsr305-3.0.2_instrumented.jar:/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/animal-sniffer-annotations-1.14_instrumented.jar:/usr/local/bin/lib/hamcrest-core.jar:/usr/local/bin/lib/junit.jar:/home/utbot_mocks/results_utbot-mocks_30/GUAVA-21_5/temp/testcases/bin
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated
Number of file with coverage information = 1951
Extracted coverage data for the class com/google/common/base/internal/Finalizer
Number of file with coverage information = 302
Number of file with coverage information = 22
Number of file with coverage information = 12
Number of file with coverage information = 35
Number of file with coverage information = 1

=== Run PIT ===
Matching Jacoco with PIT: find covered mutations
Executing Mutation Analysis using 23 mutants 

>>> RESULTS:
	Tool name: utbot-mocks
	Benchmark: GUAVA-21
	Class Under Test: com.google.common.base.internal.Finalizer
	Run number: 5
	Tool preparation time (ms): 12407
	Tool test cases generation time (ms): 20448
	Test cases execution time (ms): 15
	Test case number: 13
	Uncompilable Test Classes: 1
	Broken tests number: 0
	Failing tests number: 0
	Lines total: 65
	Lines covered: 0
	Lines coverage ratio (%): 0.0
	Conditions total: 20
	Conditions covered: 0
	Conditions coverage ratio (%): 0.0
	Mutants total: 23
	Mutants covered: 0
	Mutants coverage ratio (%): 0.0
	Mutants killed: 0
	Mutants killed ratio (%): 0.0
	Mutants alive: 23


Class com.google.common.base.internal.Finalizer ended.
Stopping process...
Tool subprocess is an instance of java.lang.UNIXProcess
Tool subprocess Id is 5128
Killing master process 5128
Executing command kill -9 5128
Execution of command kill -9 5128 finished.
Process was destroyed
